# Microservice_with_integration_CBR

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
k8s/: dep.yaml  service.yaml
src/: exceptions.py  main.py
src/api/v1/: api.py  dependencies.py
src/api/v1/endpoints/: currency.py
src/api/v1/responses/: base.py  currency.py
src/core/config/: settings.py
src/core/types/: currency.py
src/repository/: currency.py  exceptions.py  rabbitmq.py  redis.py
src/repository/utils/: abstract_queue.py  key_value_repository.py
src/schemas/: schemas.py
src/service/: currency.py  exceptions.py
src/tasks/: update_currency.py
tests/: conftest.py
tests/integration/: test_currency_update.py  test_redis.py
