[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["kali"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
aiohttp = "^3.9.5"
fastapi-utils = "^0.7.0"
aio-pika = "^9.4.1"
typing-inspect = "^0.9.0"
redis = "^5.0.7"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
